--- a/app/views/songs/index.erb
+++ b/app/views/songs/index.erb
@@ -1,7 +1,7 @@
 <html>
     <body>
-        <%@songs.each do |song|%>
-            <li><a href="/songss/<%= song.slug %>"><%= song.name %></a></li>
+        <% @songs.each do |song|%>
+            <li><a href="/songs/<%= song.slug %>"><%= song.name %></a></li>
         <%end%>
     </body>
 </html>
